# LinArith

./: Cargo.toml  README.md
src/: constraint.rs  inf_rational.rs  lib.rs  lin.rs  rational.rs  var.rs
