[package]
name = "linarith"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "An incremental linear feasibility solver over rational numbers"
readme = "README.md"
repository = "https://github.com/pstlab/LinArith"
license-file = "LICENSE"
keywords = ["constraints", "linear programming"]
categories = ["algorithms", "data-structures"]

[dependencies]
tracing = "0.1.44"
